--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ h1, h2, h3, h4, h5, h6, .mh-footer, .widget-list li, .cat-item, .page_item, .men
 .header-wrap { padding: 20px 0; }
 .logo-title { font-size: 42px; font-size: 2.625rem; color: #005a8c; font-weight: 700; text-transform: uppercase; }
 .logo-tagline { font-size: 16px; font-size: 1.0rem; text-transform: uppercase; }
+.logo-image { position: absolute; top: 5%; right: 6% }
 
 /***** Navigation *****/
 
@@ -362,6 +363,7 @@ table td { font-size: 12px; font-size: 0.75rem; border: 1px solid #000; text-ali
 @media only screen and (max-width: 980px) {
 	#mh-wrapper, .wrapper-inner { max-width: 777px; }
 	.logo-wrap { text-align: center; }
+    .logo-image { position: relative; top: 0%; right: 0% }
 	.mh-right-sb #main-content, .mh-left-sb #main-content, .mh-col { margin: 0; }
 	#main-content, .mh-sidebar, .home-sidebar, .mh-1-2, .mh-2-3, .mh-1-3, .mh-3-4, .mh-1-4 { width: 100%; }
 	.home-2, .home-3 { width: 48.07%; }
@@ -389,6 +391,7 @@ table td { font-size: 12px; font-size: 0.75rem; border: 1px solid #000; text-ali
 @media only screen and (max-width: 580px) {
 	#mh-wrapper, .wrapper-inner { width: 85%; }
 	.logo-title { font-size: 32px; font-size: 2.0rem; }
+    .logo-image { position: relative; top: 0%; right: 0% }
 	.author-box { text-align: center; }
 	.author-box-avatar { float: none; width: 100%; margin: 0 0 20px; }
 	.commentlist .comment .avatar { float: none; display: block; margin: 0 0 10px; }
@@ -398,5 +401,6 @@ table td { font-size: 12px; font-size: 0.75rem; border: 1px solid #000; text-ali
 	#mh-wrapper, .wrapper-inner { min-width: 160px; }
 	.logo-title { font-size: 28px; font-size: 1.75rem; }
 	.logo-tagline { font-size: 12px; font-size: 0.75rem; margin-bottom: 10px; }
+    .logo-image { position: relative; top: 0%; right: 0% }
 	.sb-widget .search-form .search-field { width: 86%; }
 }
